--- a/client/src/app/view/view.component.html
+++ b/client/src/app/view/view.component.html
@@ -77,16 +77,17 @@
             <mat-card class="mat-card mat-elevation-z20" *ngIf="show">
               <mat-card-content>
                 <form class="add-note" [formGroup]="noteForm" (ngSubmit)="onSubmit()">
-                        <i class="fa fa-pushpin"></i>
 
-                  <input type="text" placeholder="title" formControlName="title" required placeholder="Title" /> <br />
+           <input type="text" placeholder="title" formControlName="title" required placeholder="Title" /><i class="fas fa-thumbtack"></i>
+           <br />
                   <textarea
                     type="text"
                     formControlName="body"
                     required
-                    placeholder="Take a note..."
-                  ></textarea>
-                  <br />
+                    placeholder="Take a note..."></textarea><input style="display:none" type="file" (change)=" onFileSelected($event)" #fileInput>
+                 <i class="fa fa-image" (click)="fileInput.click()" ></i>
+                    <i class="fas fa-palette"></i><i class="fas fa-tags"></i>
+                <br />
                   <button type="submit" [disabled]="!noteForm.valid" mat-raised-button color="primary">
                      <!-- name="save"></fa> Save --><i class="fa fa-save">Save</i>
                   </button>
